# my-ml-util

./: .gitignore  build_and_update_dataset.bat  demo.py  demo_mlp.py  demo_mlp_pl.py  manual_weight_optimize.py  pyproject.toml
kaggle_dataset/: dataset-metadata.json  my_ml_util-0.1.0-py3-none-any.whl
kaggle_dataset/my_ml_util/: __init__.py  demo_trainer.py  features.py  visualize.py
kaggle_dataset/my_ml_util/mlp/: __init__.py  backbone.py  mlp_backbone.py
kaggle_dataset/my_ml_util/mlp_pl/: __init__.py  mlp.py  numerical_embeddings.py
kaggle_dataset/my_ml_util/training/: __init__.py
my_ml_util/: __init__.py  demo_early_stopper_.py  demo_plot_lr_schedules.py  demo_trainer.py  kaggle.py  mlp.py  optimization.py  torch_util.py  training.py  visualize.py
my_ml_util/ensembling/: hill_climbing.py  hill_climbing_gpu.py
my_ml_util/mlp/: __init__.py  backbone.py  categorical_embeddings.py  mlp.py  numerical_embeddings.py  resnet_backbone.py
my_ml_util/mlp_pl/: __init__.py  categorical_embeddings.py  mlp.py  mlp_backbone.py  resnet_backbone.py
my_ml_util/sklearn/: transformer.py
my_ml_util/training/: __init__.py  early_stopper.py  trainer.py
trainers/: base_trainer.py  catboost_trainer.py  lgbm_trainer.py  sklearn_trainer.py  xgb_trainer.py
