[tool.poetry]
name = "my-ml-util"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"
packages = [{include = "my_ml_util"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
icecream = "^2.1.3"
torch = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
