[tool.poetry]
name = "my-ml-util"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"
packages = [{include = "my_ml_util"}]

[tool.poetry.dependencies]
python = ">=3.10.0"
pandas = "^2.2.0"  # kaggle '2.2.0'
numpy = "^1.24.4"  # kaggle '1.24.4'
matplotlib = "^3.7.4"  # kaggle '3.8.3'
#icecream = "^2.1.3"
torch = "^2.1.2"  # kaggle currently '2.1.2+cpu' / '2.1.2'
tqdm = "^4.66.1"  # kaggle '4.66.1'
scikit-learn = "^1.2.2"  # kaggle '1.2.2'
wandb = "^0.16.2"  # kaggle '0.16.2'

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
kaggle = "^1.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"