[tool.poetry]
name = "my-ml-util"
version = "0.1.0"
description = ""
authors = ["Johannes <stopwhispering314@gmail.com>"]
readme = "README.md"
packages = [{include = "my_ml_util"}]

[tool.poetry.dependencies]
python = ">=3.10.0"
pandas = "^2.2.0"  # kaggle '2.2.0'
numpy = "^1.24.4"  # kaggle '1.24.4'
matplotlib = "^3.7.4"  # kaggle '3.8.3'
#icecream = "^2.1.3"
tqdm = "^4.66.1"  # kaggle '4.66.1'
scikit-learn = "^1.2.2"  # kaggle '1.2.2'
wandb = "^0.16.2"  # kaggle '0.16.2'
lightning = "^2.2.1"
seaborn = "^0.13.2"
transformers = "^4.39.3"
pyarrow = "^16.0.0"
torchvision = {version = "^0.18.1+cu121", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
torch = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
kaggle = "^1.6.6"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"